# sagemaker_ei_practice

./: README.md  pyproject.toml
my_package/: __init__.py
tests/: test_sentiment_analysis.py
